--- a/index.html
+++ b/index.html
@@ -40,13 +40,25 @@
                 </div>
             </section>
             <section>
-                <div class="projects-title">
+                <div class="common-title">
                     <h1>Projetos</h1>
                     <p>Alguns de nossos principais projetos:</p>
                 </div>
                 <div class="projects-all">
                     <div class="project-1">
-                        <div class="project-1-image">
+                        <div class="project-1-img">
+                            <img src="https://cdn.discordapp.com/attachments/1113813423881469952/1153793270867054633/logo.png" alt="NemTube icon">
+                        </div>
+                        <div class="project-1-info">
+                            <div class="project-1-description">
+                                <h2 translate="no">Fenix BOT</h2>
+                                <p>Lorem ipsum</p>
+                            </div>
+                            <div class="project-1-button"><a href="./projects/1">Ver Mais</a></div>
+                        </div>
+                    </div>
+                    <div class="project-1">
+                        <div class="project-1-img">
                             <img src="https://cdn.discordapp.com/attachments/1113813423881469952/1153793270867054633/logo.png" alt="NemTube icon">
                         </div>
                         <div class="project-1-info">
@@ -60,10 +72,13 @@
                 </div>
             </section>
             <section>
-                contato
+                <div class="common-title">
+                    <h1>Contato</h1>
+                    <p>Alguns de nossos principais projetos:</p>
+                </div>
             </section>
         </main>
-
+        <span class="ignore">a</span>
         <footer>
             <h3>Made with ❤ by Team Fenix</h3>   
         </footer>
