--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <section>
                 <div class="common-title">
                     <h1>Contato</h1>
-                    <p>Alguns de nossos principais projetos:</p>
+                    <p>Nosso principal contato se da por meio do</p><p onclick="redirect('https\:\/\/discord.gg/KzmTDjw6J2')">discord</p>
                 </div>
             </section>
         </main>
