--- a/index.html
+++ b/index.html
@@ -74,7 +74,22 @@
             <section>
                 <div class="common-title">
                     <h1>Contato</h1>
-                    <p>Nosso principal contato se da por meio do</p><p onclick="redirect('https\:\/\/discord.gg/KzmTDjw6J2')">discord</p>
+                    <p style="display: inline-block;">Nosso principal contato se da por meio de nosso server do</p><p style="display: inline-block; cursor:pointer;" onclick="redirect('https\:\/\/discord.gg/KzmTDjw6J2')"> discord:</p>
+                </div>
+                <div class="contato-1">
+                    <div class="contato-1-card">
+                        <div class="contato-1-image">
+                            <div class="contato-1-banner"><img src="https://cdn.discordapp.com/splashes/1055458751617978398/06712a0b6336a8e929d4341630d199cc.png?size=2048" alt="Fênix DBP ™ #100 banner"></div>
+                            <div class="contato-1-icon"><img src="https://cdn.discordapp.com/icons/1055458751617978398/341068ae6fc483a08abb28e755423dc6.png?size=2048" alt="png Fênix DBP ™ #100 icon"></div>
+                        </div>
+                        <div class="contato-1-content">
+                            <div class="contato-1-details">
+                                <h2 translate="no">Fênix DBP ™ #100</h2>
+                                <p class="">Server DBP</p>
+                                <span>~100 members</span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
         </main>
