--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <ul>
                 <li><img id="logo" src="./imgs/logo.jpg"></li>
                 <li><navopt>Início</navopt></li>
-                <li><navopt>Contato</navopt></li>
+                <li onclick="scrolto(1150)"><navopt>Contato</navopt></li>
                 <li><navopt>Produtos</navopt></li>
             </ul>
             <ul class="right-side">
@@ -77,7 +77,7 @@
                     <p style="display: inline-block;">Nosso principal contato se da por meio de nosso server do</p><p style="display: inline-block; cursor:pointer;" onclick="redirect('https\:\/\/discord.gg/KzmTDjw6J2')"> discord:</p>
                 </div>
                 <div class="contato-1">
-                    <div class="contato-1-card">
+                    <div class="contato-1-card" onclick="redirect('https\:\/\/discord.gg/KzmTDjw6J2')">
                         <div class="contato-1-image">
                             <div class="contato-1-banner"><img src="https://cdn.discordapp.com/splashes/1055458751617978398/06712a0b6336a8e929d4341630d199cc.png?size=2048" alt="Fênix DBP ™ #100 banner"></div>
                             <div class="contato-1-icon"><img src="https://cdn.discordapp.com/icons/1055458751617978398/341068ae6fc483a08abb28e755423dc6.png?size=2048" alt="png Fênix DBP ™ #100 icon"></div>
@@ -93,7 +93,6 @@
                 </div>
             </section>
         </main>
-        <span class="ignore">a</span>
         <footer>
             <h3>Made with ❤ by Team Fenix</h3>   
         </footer>
