--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header>
             <ul>
                 <li><img id="logo" src="./imgs/logo.jpg"></li>
-                <li><navopt onclick="redirect('')">Início</navopt></li>
+                <li><navopt onclick="scrolto(0)">Início</navopt></li>
                 <li onclick="scrolto(1150)"><navopt>Contato</navopt></li>
                 <li><navopt onclick="redirect('./produtos.html')">Produtos</navopt></li>
             </ul>
