--- a/produtos.html
+++ b/produtos.html
@@ -1,1 +1,38 @@
-abc
+<!DOCTYPE html>
+<html>
+   <head>
+      <meta http-equiv="content-type" content="text/html;charset=utf-8" />
+      <meta charSet="UTF-8"/>
+      <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+      <title>Fenix DBP</title>
+      <meta prefix="og: https://ogp.me/ns#" property="og:title" content="Fenix DBP"/>
+      <meta prefix="og: https://ogp.me/ns#" property="og:description" content="Loja numero um em tudo"/>
+      <meta prefix="og: https://ogp.me/ns#" property="og:image" content="/images/icon.png"/>
+      <meta name="theme-color" content="#26A2EC"/>
+      <meta name='author' content='Fergame33 0, Andreymilgraus, tigrinho'>
+      <link rel="stylesheet" type="text/css" href="./css/reset.css" media="screen" />
+      <link rel="stylesheet" type="text/css" href="./css/produtos.css" media="screen" />
+    </head>
+    <body>
+        <header>
+            <ul>
+                <li><img id="logo" src="./imgs/logo.jpg"></li>
+                <li><navopt onclick="redirect('./index.html')">Início</navopt></li>
+                <li onclick="redirect('./index.html#produtos')"><navopt>Contato</navopt></li>
+                <li><navopt onclick="redirect('./produtos.html')">Produtos</navopt></li>
+            </ul>
+            <ul class="right-side">
+                <li><navopt onclick="redirect('./docs.html')">Documentação</navopt></li>
+                <li><navopt onclick="redirect('./login.html')">Login</navopt></li>
+            </ul>
+        </header>
+        <main>
+           
+        </main>
+        <footer>
+            <h3>Made with ❤ by Team Fenix</h3>   
+        </footer>
+    </body>
+    <script src="./js/produtos.js"></script>
+</html>
