--- a/produtos.html
+++ b/produtos.html
@@ -5,14 +5,14 @@
       <meta charSet="UTF-8"/>
       <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-      <title>Fenix DBP</title>
+      <title>Produtos</title>
       <meta prefix="og: https://ogp.me/ns#" property="og:title" content="Fenix DBP"/>
       <meta prefix="og: https://ogp.me/ns#" property="og:description" content="Loja numero um em tudo"/>
       <meta prefix="og: https://ogp.me/ns#" property="og:image" content="/images/icon.png"/>
       <meta name="theme-color" content="#26A2EC"/>
       <meta name='author' content='Fergame33 0, Andreymilgraus, tigrinho'>
       <link rel="stylesheet" type="text/css" href="./css/reset.css" media="screen" />
-      <link rel="stylesheet" type="text/css" href="./css/produtos.css" media="screen" />
+      <link rel="stylesheet" type="text/css" href="./css/produtos.css" media="screen" />    
     </head>
     <body>
         <header>
@@ -28,7 +28,23 @@
             </ul>
         </header>
         <main>
-           teste
+            <h1 class="title">Produtos</h1>
+            <section>
+                <article class="card">
+                    <img class="sites" src="./imgs/site.PNG" alt="site">
+                    <div class="intro">
+                        <h1>Sites</h1>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae maxime delectus error dolorum!</p>
+                    </div>
+                </article>
+                <article class="card">
+                    <img class="bots" src="./imgs/bot.PNG" alt="bot">
+                    <div class="intro">
+                        <h1>Bots</h1>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae maxime delectus error dolorum!</p>
+                    </div>
+                </article>
+            </section>
         </main>
         <footer>
             <h3>Made with ❤ by Team Fenix</h3>   
