--- a/produtos.html
+++ b/produtos.html
@@ -34,7 +34,7 @@
                     <img class="sites" src="./imgs/site.PNG" alt="site">
                     <div class="intro">
                         <h1>Sites</h1>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae maxime delectus error dolorum!</p>
+                        <p>Interessado em nosso trabalho? Diga-nos as especificações do seu site via <a href="https://discord.com/">Discord</a> ou <a href="https://web.whatsapp.com/">Whatsapp</a> para que suas ideias não fiquem só no papel!</p>
                     </div>
                 </article>
                 <article class="card">
