--- a/produtos.html
+++ b/produtos.html
@@ -34,14 +34,14 @@
                     <img class="sites" src="./imgs/site.PNG" alt="site">
                     <div class="intro">
                         <h1>Sites</h1>
-                        <p>Interessado em nosso trabalho? Diga-nos as especificações do seu site via <a href="https://discord.com/">Discord</a> ou <a href="https://web.whatsapp.com/">Whatsapp</a> para que suas ideias não fiquem só no papel!</p>
+                        <p>Interessado em nosso trabalho? Diga-nos as especificações do seu site via <a target="_blank" href="https://discord.com/">Discord</a> ou <a target="_blank" href="https://web.whatsapp.com/">Whatsapp</a> para que suas ideias não fiquem só no papel!</p>
                     </div>
                 </article>
                 <article class="card">
                     <img class="bots" src="./imgs/bot.PNG" alt="bot">
                     <div class="intro">
                         <h1>Bots</h1>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae maxime delectus error dolorum!</p>
+                        <p>Deseja melhor moderação em seu server do Discord? Com nossos bots outras inúmeras possibilidades estarão garantidas. Ao clicar neste card, você será direcionado a uma página de especificações. Até logo!</p>
                     </div>
                 </article>
             </section>
