--- a/docs.html
+++ b/docs.html
@@ -18,8 +18,8 @@
         <header>
             <ul>
                 <li><img id="logo" src="./imgs/logo.jpg"></li>
-                <li class='underline'><navopt onclick="scrolto(0)">Início</navopt></li>
-                <li class='underline' onclick="scrolto(1150)"><navopt>Contato</navopt></li>
+                <li class='underline'><navopt onclick="redirect('./index.html')">Início</navopt></li>
+                <li class='underline' onclick="redirect('./index.html#contato')"><navopt>Contato</navopt></li>
                 <li class='underline'><navopt onclick="redirect('./produtos.html')">Produtos</navopt></li>
             </ul>
             <ul class="right-side">
